--- a/mktxp/cli/config/mktxp.conf
+++ b/mktxp/cli/config/mktxp.conf
@@ -9,3 +9,28 @@
 ## but WITHOUT ANY WARRANTY; without even the implied warranty of
 ## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 ## GNU General Public License for more details.
+
+
+[Sample_RouterBoard]
+    enabled = False
+
+    hostname = localhost
+    port = 8728
+
+    username = user
+    password = password
+
+    use_ssl = False
+    ssl_certificate = False
+
+    identity = True
+    resource = True
+    health = True
+    dhcp = True
+    dhcp_lease = True
+    pool = True
+    interface = True
+    monitor = True
+    route = True
+    wireless = True
+    caps_man = True
