--- a/mktxp/cli/config/mktxp.conf
+++ b/mktxp/cli/config/mktxp.conf
@@ -11,7 +11,7 @@
 ## GNU General Public License for more details.
 
 
-[Sample_RouterBoard]
+[SampleRouter]
     enabled = False
 
     hostname = localhost
@@ -33,4 +33,4 @@
     monitor = True
     route = True
     wireless = True
-    caps_man = True
+    capsman = True
