--- a/mktxp/cli/config/mktxp.conf
+++ b/mktxp/cli/config/mktxp.conf
@@ -23,9 +23,6 @@
     use_ssl = False
     ssl_certificate = False
 
-    identity = True
-    resource = True
-    health = True
     dhcp = True
     dhcp_lease = True
     pool = True
@@ -33,4 +30,6 @@
     monitor = True
     route = True
     wireless = True
+    wireless_clients = True
     capsman = True
+    capsman_clients = True
