cli options, fixes

--- a/mktxp/cli/config/mktxp.conf
+++ b/mktxp/cli/config/mktxp.conf
@@ -11,18 +11,19 @@
 ## GNU General Public License for more details.
 
 
-[SampleRouter]
-    enabled = False
-
-    hostname = localhost
-    port = 8728
-
-    username = user
+[Sample-Router]
+    enabled = False         # turns metrics collection for this RouterOS device on / off
+    
+    hostname = localhost    # RouterOS IP address
+    port = 8728             # RouterOS IP Port
+    
+    username = username     # RouterOS user, needs to have 'read' and 'api' permissions
     password = password
-
-    use_ssl = False
-    ssl_certificate = False
-
+    
+    use_ssl = False                 # enables connection via API-SSL servis
+    no_ssl_certificate = False      # enables API_SSL connect without router SSL certificate
+    ssl_certificate_verify = False  # turns SSL certificate verification on / off
+    
     dhcp = True
     dhcp_lease = True
     pool = True
@@ -33,3 +34,5 @@
     wireless_clients = True
     capsman = True
     capsman_clients = True
+
+    
