--- a/mktxp/cli/config/_mktxp.conf
+++ b/mktxp/cli/config/_mktxp.conf
@@ -13,3 +13,7 @@
 
 [MKTXP]
     port = 49090
+    socket_timeout = 2
+    initial_delay_on_failure = 120
+    max_delay_on_failure = 900
+    delay_inc_div = 5
