--- a/mktxp/cli/config/mktxp.conf
+++ b/mktxp/cli/config/mktxp.conf
@@ -22,8 +22,8 @@
     
     use_ssl = False                 # enables connection via API-SSL servis
     no_ssl_certificate = False      # enables API_SSL connect without router SSL certificate
-    ssl_certificate_verify = False  # turns SSL certificate verification on / off
-    
+    ssl_certificate_verify = False  # turns SSL certificate verification on / off   
+
     dhcp = True
     dhcp_lease = True
     pool = True
@@ -35,4 +35,4 @@
     capsman = True
     capsman_clients = True
 
-    
+    use_comments_over_names = False  # when available, use comments instead of interface names 
