firewall/mktxp colllectors, fixes/optimizations

--- a/mktxp/cli/config/mktxp.conf
+++ b/mktxp/cli/config/mktxp.conf
@@ -28,6 +28,7 @@
     dhcp_lease = True
     pool = True
     interface = True
+    firewall = True
     monitor = True
     route = True
     wireless = True
@@ -35,4 +36,4 @@
     capsman = True
     capsman_clients = True
 
-    use_comments_over_names = False  # when available, use comments instead of interface names 
+    use_comments_over_names = False  # when available, use comments instead of interfaces names 
