firewall/mktxp colllectors, fixes/optimizations

--- a/mktxp/cli/config/mktxp.conf
+++ b/mktxp/cli/config/mktxp.conf
@@ -24,16 +24,16 @@
     no_ssl_certificate = False      # enables API_SSL connect without router SSL certificate
     ssl_certificate_verify = False  # turns SSL certificate verification on / off   
 
-    dhcp = True
-    dhcp_lease = True
-    pool = True
-    interface = True
-    firewall = True
-    monitor = True
-    route = True
-    wireless = True
-    wireless_clients = True
-    capsman = True
-    capsman_clients = True
+    dhcp = True                     # DHCP general metrics
+    dhcp_lease = True               # DHCP lease metrics
+    pool = True                     # Pool metrics
+    interface = True                # Interfaces traffic metrics
+    firewall = True                 # Firewall rules traffic metrics
+    monitor = True                  # Interface monitor metrics
+    route = True                    # Routes metrics
+    wireless = True                 # WLAN general metrics
+    wireless_clients = True         # WLAN clients metrics
+    capsman = True                  # CAPsMAN general metrics
+    capsman_clients = True          # CAPsMAN clients metrics
 
-    use_comments_over_names = False  # when available, use comments instead of interfaces names 
+    use_comments_over_names = False  # when available, forces using comments over the interfaces names 
