Collector registry, fixes/optimizations

--- a/mktxp/cli/config/_mktxp.conf
+++ b/mktxp/cli/config/_mktxp.conf
@@ -12,10 +12,11 @@
 
 
 [MKTXP]
-    port = 49090					# default metrics HTTP server port
-    bandwidth_test_interval = 420	# Interval between periodic bandwidth tests
-
-    socket_timeout = 2				# Socket connection timeout
-    initial_delay_on_failure = 120	# Delay untill next connection attempt to a RouterOS Device
-    max_delay_on_failure = 900		# Max delay untill next connection attempt to a RouterOS Device
-    delay_inc_div = 5				# Delay increment factor
+    port = 49090
+    socket_timeout = 2
+    initial_delay_on_failure = 120
+    max_delay_on_failure = 900
+    delay_inc_div = 5
+    bandwidth_test_interval = 420
+    
+	collectors = IdentityCollector, SystemResourceCollector, HealthCollector, DHCPCollector, PoolCollector, InterfaceCollector, FirewallCollector, MonitorCollector, RouteCollector, WLANCollector, CapsmanCollector, MKTXPCollector
