--- a/mktxp/cli/config/_mktxp.conf
+++ b/mktxp/cli/config/_mktxp.conf
@@ -14,9 +14,10 @@
 [MKTXP]
     port = 49090
     socket_timeout = 2
+    
     initial_delay_on_failure = 120
     max_delay_on_failure = 900
     delay_inc_div = 5
-    bandwidth_test_interval = 420
-    
-	collectors = IdentityCollector, SystemResourceCollector, HealthCollector, DHCPCollector, PoolCollector, InterfaceCollector, FirewallCollector, MonitorCollector, RouteCollector, WLANCollector, CapsmanCollector, MKTXPCollector
+
+	bandwidth = True                # Turns metrics bandwidth metrics collection on / off    
+	bandwidth_test_interval = 420   # Interval for colllecting bandwidth metrics
