--- a/mktxp/cli/config/mktxp.conf
+++ b/mktxp/cli/config/mktxp.conf
@@ -30,10 +30,11 @@
     interface = True                # Interfaces traffic metrics
     firewall = True                 # Firewall rules traffic metrics
     monitor = True                  # Interface monitor metrics
+    poe = True                      # POE metrics
     route = True                    # Routes metrics
     wireless = True                 # WLAN general metrics
     wireless_clients = True         # WLAN clients metrics
     capsman = True                  # CAPsMAN general metrics
-    capsman_clients = True          # CAPsMAN clients metrics
+    capsman_clients = True          # CAPsMAN clients metrics    
 
     use_comments_over_names = True  # when available, forces using comments over the interfaces names 
