adds connections datasource/collector

--- a/mktxp/cli/config/mktxp.conf
+++ b/mktxp/cli/config/mktxp.conf
@@ -26,6 +26,7 @@
 
     dhcp = True                     # DHCP general metrics
     dhcp_lease = True               # DHCP lease metrics
+    connections = True              # IP connections metrics
     pool = True                     # Pool metrics
     interface = True                # Interfaces traffic metrics
     firewall = True                 # Firewall rules traffic metrics
