expires_after cardinality, bug fixes

--- a/mktxp/cli/config/_mktxp.conf
+++ b/mktxp/cli/config/_mktxp.conf
@@ -21,3 +21,5 @@
 
 	bandwidth = True                # Turns metrics bandwidth metrics collection on / off    
 	bandwidth_test_interval = 420   # Interval for colllecting bandwidth metrics
+
+    verbose_mode = False            # Set it on for troubleshooting
