adds optional public IP address metric

--- a/mktxp/cli/config/mktxp.conf
+++ b/mktxp/cli/config/mktxp.conf
@@ -32,6 +32,7 @@
     firewall = True                 # Firewall rules traffic metrics
     monitor = True                  # Interface monitor metrics
     poe = True                      # POE metrics
+    public_ip = True                # Public IP metrics
     route = True                    # Routes metrics
     wireless = True                 # WLAN general metrics
     wireless_clients = True         # WLAN clients metrics
