--- a/mktxp/cli/config/mktxp.conf
+++ b/mktxp/cli/config/mktxp.conf
@@ -33,6 +33,7 @@
     monitor = True                  # Interface monitor metrics
     poe = True                      # POE metrics
     public_ip = True                # Public IP metrics
+    ipv6_neighbor = False           # Reachable IPv6 Neighbors
     route = True                    # Routes metrics
     wireless = True                 # WLAN general metrics
     wireless_clients = True         # WLAN clients metrics
