optional ipv6 firewall, disabled by default

--- a/mktxp/cli/config/mktxp.conf
+++ b/mktxp/cli/config/mktxp.conf
@@ -29,11 +29,14 @@
     connections = True              # IP connections metrics
     pool = True                     # Pool metrics
     interface = True                # Interfaces traffic metrics
-    firewall = True                 # Firewall rules traffic metrics
+    
+    firewall = True                 # IPv4 Firewall rules traffic metrics
+    ipv6_firewall = False           # IPv6 Firewall rules traffic metrics
+    ipv6_neighbor = False           # Reachable IPv6 Neighbors
+
     monitor = True                  # Interface monitor metrics
     poe = True                      # POE metrics
     public_ip = True                # Public IP metrics
-    ipv6_neighbor = False           # Reachable IPv6 Neighbors
     route = True                    # Routes metrics
     wireless = True                 # WLAN general metrics
     wireless_clients = True         # WLAN clients metrics
