Queue tree / Active Users collectors, fixes

--- a/mktxp/cli/config/_mktxp.conf
+++ b/mktxp/cli/config/_mktxp.conf
@@ -21,6 +21,7 @@
 
     bandwidth = True                # Turns metrics bandwidth metrics collection on / off    
     bandwidth_test_interval = 420   # Interval for colllecting bandwidth metrics
+    minimal_collect_interval = 5    # Minimal metric collection interval
 
     verbose_mode = False            # Set it on for troubleshooting
 
