interface monitor optimisations/wifiwave2 support

--- a/mktxp/cli/config/mktxp.conf
+++ b/mktxp/cli/config/mktxp.conf
@@ -47,6 +47,7 @@
 
     user = True                     # Active Users metrics
     queue = True                    # Queues metrics
-    remote_dhcp_entry = None        # Alternative mktxp entry for DHCP info resolution (capsman/wireless)
+    
+    remote_dhcp_entry = None        # An MKTXP entry for remote DHCP info resolution (capsman/wireless)
 
     use_comments_over_names = True  # when available, forces using comments over the interfaces names 
