--- a/mktxp/cli/config/_mktxp.conf
+++ b/mktxp/cli/config/_mktxp.conf
@@ -26,7 +26,6 @@
     verbose_mode = False            # Set it on for troubleshooting
 
     fetch_routers_in_parallel = False   # Set to True if you want to fetch multiple routers parallel
-    max_worker_threads = 5              # Max number of worker threads that can fetch routers. Meaningless if fetch_routers_in_parallel is set to False
-    
-    max_scrape_duration = 10            # Max duration of individual routers' metrics collection 
-    total_max_scrape_duration = 30      # Max overall duration of all metrics collection 
+    max_worker_threads = 5              # Max number of worker threads that can fetch routers (parallel fetch only)
+    max_scrape_duration = 10            # Max duration of individual routers' metrics collection (parallel fetch only)
+    total_max_scrape_duration = 30      # Max overall duration of all metrics collection (parallel fetch only)
