connections stats collector / cmd output, remote dhcp resolver, fixes / optimizations

--- a/mktxp/cli/config/mktxp.conf
+++ b/mktxp/cli/config/mktxp.conf
@@ -27,7 +27,10 @@
     installed_packages = True       # Installed packages
     dhcp = True                     # DHCP general metrics
     dhcp_lease = True               # DHCP lease metrics
+
     connections = True              # IP connections metrics
+    connection_stats = False        # Open IP connections metrics 
+
     pool = True                     # Pool metrics
     interface = True                # Interfaces traffic metrics
     
