--- a/mktxp/cli/config/mktxp.conf
+++ b/mktxp/cli/config/mktxp.conf
@@ -48,6 +48,8 @@
     capsman = True                  # CAPsMAN general metrics
     capsman_clients = True          # CAPsMAN clients metrics    
 
+    kid_control_devices = False     # Kid Control metrics    
+
     user = True                     # Active Users metrics
     queue = True                    # Queues metrics
     
