waitress, IPv4/IPv6 listen list

--- a/mktxp/cli/config/_mktxp.conf
+++ b/mktxp/cli/config/_mktxp.conf
@@ -12,7 +12,7 @@
 
 
 [MKTXP]
-    port = 49090
+    listen = '0.0.0.0:49090'         # Space separated list of socket addresses to listen to, both IPV4 and IPV6
     socket_timeout = 2
     
     initial_delay_on_failure = 120
@@ -20,7 +20,7 @@
     delay_inc_div = 5
 
     bandwidth = False                # Turns metrics bandwidth metrics collection on / off    
-    bandwidth_test_interval = 600    # Interval for colllecting bandwidth metrics
+    bandwidth_test_interval = 600    # Interval for collecting bandwidth metrics
     minimal_collect_interval = 5     # Minimal metric collection interval
 
     verbose_mode = False             # Set it on for troubleshooting
