--- a/mktxp/cli/config/mktxp.conf
+++ b/mktxp/cli/config/mktxp.conf
@@ -12,8 +12,13 @@
 
 
 [Sample-Router]
-    enabled = False         # turns metrics collection for this RouterOS device on / off
-    
+    # for specific configuration on the router level, change here the defaults values from below
+    hostname = 192.168.88.1
+
+[default]
+    # this affects configuration of all routers, unless overloaded on their specific levels
+
+    enabled = True          # turns metrics collection for this RouterOS device on / off
     hostname = localhost    # RouterOS IP address
     port = 8728             # RouterOS IP Port
     
