--- a/mktxp/cli/config/mktxp.conf
+++ b/mktxp/cli/config/mktxp.conf
@@ -53,7 +53,8 @@
     capsman = True                  # CAPsMAN general metrics
     capsman_clients = True          # CAPsMAN clients metrics    
 
-    kid_control_devices = False     # Kid Control metrics    
+    kid_control_assigned = False    # Allow Kid Control metrics for connected devices with assigned users
+    kid_control_dynamic = False     # Allow Kid Control metrics for all connected devices, including those without assigned user
 
     user = True                     # Active Users metrics
     queue = True                    # Queues metrics
