--- a/mktxp/cli/config/mktxp.conf
+++ b/mktxp/cli/config/mktxp.conf
@@ -28,6 +28,7 @@
     use_ssl = False                 # enables connection via API-SSL servis
     no_ssl_certificate = False      # enables API_SSL connect without router SSL certificate
     ssl_certificate_verify = False  # turns SSL certificate verification on / off   
+    plaintext_login = True          # for legacy RouterOS versions below 6.43 use False
 
     installed_packages = True       # Installed packages
     dhcp = True                     # DHCP general metrics
