--- a/mktxp/cli/config/mktxp.conf
+++ b/mktxp/cli/config/mktxp.conf
@@ -66,7 +66,8 @@
 
     bgp = False                     # BGP sessions metrics
     
-    remote_dhcp_entry = None        # An MKTXP entry for remote DHCP info resolution (capsman/wireless)
+    remote_dhcp_entry = None        # An MKTXP entry to provide for remote DHCP info / resolution
+    remote_capsman_entry = None     # An MKTXP entry to provide for remote capsman info 
 
     use_comments_over_names = True  # when available, forces using comments over the interfaces names
 
