More System/Health metrics

--- a/mktxp/cli/config/_mktxp.conf
+++ b/mktxp/cli/config/_mktxp.conf
@@ -25,7 +25,7 @@
 
     verbose_mode = False             # Set it on for troubleshooting
 
-    fetch_routers_in_parallel = False   # Set to True if you want to fetch multiple routers parallel
+    fetch_routers_in_parallel = False   # Perform fetching metrics from multiple routers in parallel / sequentially 
     max_worker_threads = 5              # Max number of worker threads that can fetch routers (parallel fetch only)
     max_scrape_duration = 30            # Max duration of individual routers' metrics collection (parallel fetch only)
     total_max_scrape_duration = 90      # Max overall duration of all metrics collection (parallel fetch only)
