--- a/mktxp/cli/config/_mktxp.conf
+++ b/mktxp/cli/config/_mktxp.conf
@@ -13,7 +13,7 @@
 
 [MKTXP]
     listen = '0.0.0.0:49090'         # Space separated list of socket addresses to listen to, both IPV4 and IPV6
-    socket_timeout = 4
+    socket_timeout = 5
     
     initial_delay_on_failure = 120
     max_delay_on_failure = 900
@@ -25,7 +25,7 @@
 
     verbose_mode = False             # Set it on for troubleshooting
 
-    fetch_routers_in_parallel = False   # Perform fetching metrics from multiple routers in parallel / sequentially 
+    fetch_routers_in_parallel = False   # Fetch metrics from multiple routers in parallel / sequentially 
     max_worker_threads = 5              # Max number of worker threads that can fetch routers (parallel fetch only)
     max_scrape_duration = 30            # Max duration of individual routers' metrics collection (parallel fetch only)
     total_max_scrape_duration = 90      # Max overall duration of all metrics collection (parallel fetch only)
