--- a/deploy/kubernetes/secret.yaml
+++ b/deploy/kubernetes/secret.yaml
@@ -5,7 +5,6 @@ metadata:
 type: Opaque
 stringData:
     _mktxp.conf: |
-        ## Source: https://github.com/akpw/mktxp/blob/main/mktxp/cli/config/_mktxp.conf
         ## Copyright (c) 2020 Arseniy Kuznetsov
         ##
         ## This program is free software; you can redistribute it and/or
@@ -20,25 +19,26 @@ stringData:
 
 
         [MKTXP]
-            port = 49090
-            socket_timeout = 2
-
+            listen = '0.0.0.0:49090'         # Space separated list of socket addresses to listen to, both IPV4 and IPV6
+            socket_timeout = 5
+            
             initial_delay_on_failure = 120
             max_delay_on_failure = 900
             delay_inc_div = 5
 
-            bandwidth = False                # Turns metrics bandwidth metrics collection on / off
-            bandwidth_test_interval = 600    # Interval for colllecting bandwidth metrics
+            bandwidth = False                # Turns metrics bandwidth metrics collection on / off    
+            bandwidth_test_interval = 600    # Interval for collecting bandwidth metrics
             minimal_collect_interval = 5     # Minimal metric collection interval
 
             verbose_mode = False             # Set it on for troubleshooting
 
-            fetch_routers_in_parallel = False   # Set to True if you want to fetch multiple routers parallel
+            fetch_routers_in_parallel = False   # Fetch metrics from multiple routers in parallel / sequentially 
             max_worker_threads = 5              # Max number of worker threads that can fetch routers (parallel fetch only)
-            max_scrape_duration = 10            # Max duration of individual routers' metrics collection (parallel fetch only)
-            total_max_scrape_duration = 30      # Max overall duration of all metrics collection (parallel fetch only)
+            max_scrape_duration = 30            # Max duration of individual routers' metrics collection (parallel fetch only)
+            total_max_scrape_duration = 90      # Max overall duration of all metrics collection (parallel fetch only)
+
+            compact_default_conf_values = False  # Compact mktxp.conf, so only specific values are kept on the individual routers' level
     mktxp.conf: |
-        ## Source: https://github.com/akpw/mktxp/blob/main/mktxp/cli/config/mktxp.conf
         ## Copyright (c) 2020 Arseniy Kuznetsov
         ##
         ## This program is free software; you can redistribute it and/or
@@ -53,49 +53,64 @@ stringData:
 
 
         [Sample-Router]
-            enabled = False         # turns metrics collection for this RouterOS device on / off
+            # for specific configuration on the router level, change here the defaults values from below
+            hostname = 192.168.88.1
 
+        [default]
+            # this affects configuration of all routers, unless overloaded on their specific levels
+
+            enabled = True          # turns metrics collection for this RouterOS device on / off
             hostname = localhost    # RouterOS IP address
             port = 8728             # RouterOS IP Port
-
+            
             username = username     # RouterOS user, needs to have 'read' and 'api' permissions
             password = password
-
+            
             use_ssl = False                 # enables connection via API-SSL servis
             no_ssl_certificate = False      # enables API_SSL connect without router SSL certificate
-            ssl_certificate_verify = False  # turns SSL certificate verification on / off
+            ssl_certificate_verify = False  # turns SSL certificate verification on / off   
+            plaintext_login = True          # for legacy RouterOS versions below 6.43 use False
 
             installed_packages = True       # Installed packages
             dhcp = True                     # DHCP general metrics
             dhcp_lease = True               # DHCP lease metrics
 
             connections = True              # IP connections metrics
-            connection_stats = False        # Open IP connections metrics
+            connection_stats = False        # Open IP connections metrics 
 
-            pool = True                     # Pool metrics
             interface = True                # Interfaces traffic metrics
-
+            
+            route = True                    # IPv4 Routes metrics
+            pool = True                     # IPv4 Pool metrics
             firewall = True                 # IPv4 Firewall rules traffic metrics
+            neighbor = True                 # IPv4 Reachable Neighbors
+
+            ipv6_route = False              # IPv6 Routes metrics    
+            ipv6_pool = False               # IPv6 Pool metrics
             ipv6_firewall = False           # IPv6 Firewall rules traffic metrics
-            ipv6_neighbor = False           # Reachable IPv6 Neighbors
+            ipv6_neighbor = False           # IPv6 Reachable Neighbors
 
             poe = True                      # POE metrics
             monitor = True                  # Interface monitor metrics
             netwatch = True                 # Netwatch metrics
             public_ip = True                # Public IP metrics
-            route = True                    # Routes metrics
             wireless = True                 # WLAN general metrics
             wireless_clients = True         # WLAN clients metrics
             capsman = True                  # CAPsMAN general metrics
-            capsman_clients = True          # CAPsMAN clients metrics
+            capsman_clients = True          # CAPsMAN clients metrics    
 
-            kid_control_devices = False     # Kid Control metrics
+            kid_control_assigned = False    # Allow Kid Control metrics for connected devices with assigned users
+            kid_control_dynamic = False     # Allow Kid Control metrics for all connected devices, including those without assigned user
 
             user = True                     # Active Users metrics
             queue = True                    # Queues metrics
 
-            remote_dhcp_entry = None        # An MKTXP entry for remote DHCP info resolution (capsman/wireless)
+            bgp = False                     # BGP sessions metrics
+            
+            remote_dhcp_entry = None        # An MKTXP entry to provide for remote DHCP info / resolution
+            remote_capsman_entry = None     # An MKTXP entry to provide for remote capsman info 
 
             use_comments_over_names = True  # when available, forces using comments over the interfaces names
 
             check_for_updates = False       # check for available ROS updates
+
