Add collector for active IPSec peers

--- a/deploy/kubernetes/secret.yaml
+++ b/deploy/kubernetes/secret.yaml
@@ -114,3 +114,4 @@ stringData:
 
             check_for_updates = False       # check for available ROS updates
 
+            ipsec = False                   # IPSec active peer metrics
