--- a/deploy/kubernetes/secret.yaml
+++ b/deploy/kubernetes/secret.yaml
@@ -97,7 +97,9 @@ stringData:
             wireless = True                 # WLAN general metrics
             wireless_clients = True         # WLAN clients metrics
             capsman = True                  # CAPsMAN general metrics
-            capsman_clients = True          # CAPsMAN clients metrics    
+            capsman_clients = True          # CAPsMAN clients metrics
+
+            lte = False                     # LTE signal and status metrics
 
             kid_control_assigned = False    # Allow Kid Control metrics for connected devices with assigned users
             kid_control_dynamic = False     # Allow Kid Control metrics for all connected devices, including those without assigned user
