LTE metrics support for RouterOS v6

--- a/deploy/kubernetes/secret.yaml
+++ b/deploy/kubernetes/secret.yaml
@@ -99,7 +99,7 @@ stringData:
             capsman = True                  # CAPsMAN general metrics
             capsman_clients = True          # CAPsMAN clients metrics
 
-            lte = False                     # LTE signal and status metrics
+            lte = False                     # LTE signal and status metrics (requires an additional 'test' permission policy on RouterOS v6)
             ipsec = False                   # IPSec active peer metrics
             switch_port = False             # Switch Port metrics
 
