added support for routing process stats

--- a/mktxp/cli/config/mktxp.conf
+++ b/mktxp/cli/config/mktxp.conf
@@ -69,6 +69,7 @@
     queue = True                    # Queues metrics
 
     bgp = False                     # BGP sessions metrics
+    routing_stats = False           # routing process stats
     
     remote_dhcp_entry = None        # An MKTXP entry to provide for remote DHCP info / resolution
     remote_capsman_entry = None     # An MKTXP entry to provide for remote capsman info 
