add certificate datasource and metrics

--- a/deploy/kubernetes/secret.yaml
+++ b/deploy/kubernetes/secret.yaml
@@ -110,7 +110,9 @@ stringData:
             queue = True                    # Queues metrics
 
             bgp = False                     # BGP sessions metrics
-            
+
+            certificate = True              # Certificates metrics
+
             remote_dhcp_entry = None        # An MKTXP entry to provide for remote DHCP info / resolution
             remote_capsman_entry = None     # An MKTXP entry to provide for remote capsman info 
 
