Add new monitor_unplugged setting to documentation & examples

--- a/deploy/kubernetes/secret.yaml
+++ b/deploy/kubernetes/secret.yaml
@@ -92,6 +92,7 @@ stringData:
 
             poe = True                      # POE metrics
             monitor = True                  # Interface monitor metrics
+            monitor_unplugged = False       # Interface monitor metrics for unplugged SFP/SFP+ ports
             netwatch = True                 # Netwatch metrics
             public_ip = True                # Public IP metrics
             wireless = True                 # WLAN general metrics
