disable certificate collector by default

--- a/deploy/kubernetes/secret.yaml
+++ b/deploy/kubernetes/secret.yaml
@@ -111,7 +111,7 @@ stringData:
 
             bgp = False                     # BGP sessions metrics
 
-            certificate = True              # Certificates metrics
+            certificate = False             # Certificates metrics
 
             remote_dhcp_entry = None        # An MKTXP entry to provide for remote DHCP info / resolution
             remote_capsman_entry = None     # An MKTXP entry to provide for remote capsman info 
