--- a/mktxp/cli/config/mktxp.conf
+++ b/mktxp/cli/config/mktxp.conf
@@ -69,7 +69,7 @@
     queue = True                    # Queues metrics
 
     bgp = False                     # BGP sessions metrics
-    certificate = True              # Certificates metrics
+    certificate = False             # Certificates metrics
     
     remote_dhcp_entry = None        # An MKTXP entry to provide for remote DHCP info / resolution
     remote_capsman_entry = None     # An MKTXP entry to provide for remote capsman info 
