Routing stats metrics adjustments

--- a/deploy/kubernetes/secret.yaml
+++ b/deploy/kubernetes/secret.yaml
@@ -110,6 +110,7 @@ stringData:
             queue = True                    # Queues metrics
 
             bgp = False                     # BGP sessions metrics
+            routing_stats = False           # Routing process stats            
             certificate = False             # Certificates metrics
 
             remote_dhcp_entry = None        # An MKTXP entry to provide for remote DHCP info / resolution
