Rename monitor_unplugged to be clear it is about sfp modules

--- a/mktxp/cli/config/mktxp.conf
+++ b/mktxp/cli/config/mktxp.conf
@@ -51,7 +51,7 @@
 
     poe = True                      # POE metrics
     monitor = True                  # Interface monitor metrics
-    monitor_unplugged = False       # Interface monitor metrics for unplugged SFP/SFP+ ports
+    monitor_sfp_unplugged = False   # Interface monitor metrics for unplugged SFP/SFP+ ports
     netwatch = True                 # Netwatch metrics
     public_ip = True                # Public IP metrics
     wireless = True                 # WLAN general metrics
