--- a/deploy/kubernetes/secret.yaml
+++ b/deploy/kubernetes/secret.yaml
@@ -84,7 +84,7 @@ stringData:
             pool = True                     # IPv4 Pool metrics
             firewall = True                 # IPv4 Firewall rules traffic metrics
             neighbor = True                 # IPv4 Reachable Neighbors
-            dns = True                      # DNS stats
+            dns = False                     # DNS stats
 
             ipv6_route = False              # IPv6 Routes metrics    
             ipv6_pool = False               # IPv6 Pool metrics
