--- a/mktxp/cli/config/mktxp.conf
+++ b/mktxp/cli/config/mktxp.conf
@@ -72,6 +72,7 @@
     user = True                     # Active Users metrics
     queue = True                    # Queues metrics
 
+    bfd = False                     # BFD sessions metrics
     bgp = False                     # BGP sessions metrics
     routing_stats = False           # Routing process stats
     certificate = False             # Certificates metrics
