--- a/deploy/kubernetes/secret.yaml
+++ b/deploy/kubernetes/secret.yaml
@@ -114,6 +114,7 @@ stringData:
             user = True                     # Active Users metrics
             queue = True                    # Queues metrics
 
+            bfd = False                     # BFD sessions metrics
             bgp = False                     # BGP sessions metrics
             routing_stats = False           # Routing process stats            
             certificate = False             # Certificates metrics
