--- a/mktxp/cli/config/mktxp.conf
+++ b/mktxp/cli/config/mktxp.conf
@@ -24,6 +24,7 @@
     
     username = username     # RouterOS user, needs to have 'read' and 'api' permissions
     password = password
+    credentials_file = ""
     
     use_ssl = False                 # enables connection via API-SSL servis
     no_ssl_certificate = False      # enables API_SSL connect without router SSL certificate
