--- a/mktxp/cli/config/_mktxp.conf
+++ b/mktxp/cli/config/_mktxp.conf
@@ -12,7 +12,7 @@
 
 
 [MKTXP]
-    listen = '0.0.0.0:49090'         # Space separated list of socket addresses to listen to, both IPV4 and IPV6
+    listen = '*:49090'         # Space separated list of socket addresses to listen to, both IPV4 and IPV6
     socket_timeout = 5
     
     initial_delay_on_failure = 120
