--- a/deploy/kubernetes/secret.yaml
+++ b/deploy/kubernetes/secret.yaml
@@ -121,6 +121,8 @@ stringData:
             routing_stats = False           # Routing process stats            
             certificate = False             # Certificates metrics
 
+            container = False               # Containers metrics
+
             remote_dhcp_entry = None        # An MKTXP entry to provide for remote DHCP info / resolution
             remote_capsman_entry = None     # An MKTXP entry to provide for remote capsman info 
 
