--- a/deploy/kubernetes/secret.yaml
+++ b/deploy/kubernetes/secret.yaml
@@ -37,7 +37,8 @@ stringData:
             max_scrape_duration = 30            # Max duration of individual routers' metrics collection (parallel fetch only)
             total_max_scrape_duration = 90      # Max overall duration of all metrics collection (parallel fetch only)
 
-            compact_default_conf_values = False  # Compact mktxp.conf, so only specific values are kept on the individual routers' level
+            compact_default_conf_values = False       # Compact mktxp.conf, so only specific values are kept on the individual routers' level
+            prometheus_headers_deduplication = False  # Deduplicate Prometheus HELP / TYPE headers in the metrics output 
     mktxp.conf: |
         ## Copyright (c) 2020 Arseniy Kuznetsov
         ##
