Connection lifecycle option to control persistent connection pool, #210

--- a/mktxp/cli/config/_mktxp.conf
+++ b/mktxp/cli/config/_mktxp.conf
@@ -30,6 +30,6 @@
     max_scrape_duration = 30            # Max duration of individual routers' metrics collection (parallel fetch only)
     total_max_scrape_duration = 90      # Max overall duration of all metrics collection (parallel fetch only)
 
+    persistent_router_connection_pool = True  # Use a persistent router connections pool between scrapes
     compact_default_conf_values = False       # Compact mktxp.conf, so only specific values are kept on the individual routers' level
     prometheus_headers_deduplication = False  # Deduplicate Prometheus HELP / TYPE headers in the metrics output
-    
