--- a/deploy/kubernetes/secret.yaml
+++ b/deploy/kubernetes/secret.yaml
@@ -71,7 +71,8 @@ stringData:
             
             use_ssl = False                 # enables connection via API-SSL servis
             no_ssl_certificate = False      # enables API_SSL connect without router SSL certificate
-            ssl_certificate_verify = False  # turns SSL certificate verification on / off   
+            ssl_certificate_verify = False  # turns SSL certificate verification on / off
+            ssl_check_hostname = True       # check if the hostname matches the peer cert’s hostname 
             ssl_ca_file = ""                # path to the certificate authority file to validate against, leave empty to use system store
             plaintext_login = True          # for legacy RouterOS versions below 6.43 use False
 
