Support `name` field in Netwatch and provide control over `name` label.
Solves #175 and adds more control over `label` values via `netwatch_name_label` setting.

--- a/deploy/kubernetes/secret.yaml
+++ b/deploy/kubernetes/secret.yaml
@@ -130,5 +130,5 @@ stringData:
             remote_capsman_entry = None     # An MKTXP entry to provide for remote capsman info 
 
             use_comments_over_names = True  # when available, forces using comments over the interfaces names
+            netwatch_name_label = "default" # define behaviour of name label in netwatch metrics: default/id/host/name/comment/name_or_host/comment_or_name_or_host
             check_for_updates = False       # check for available ROS updates
-
