Add Firewall Address Lists collector, #222

--- a/mktxp/cli/config/mktxp.conf
+++ b/mktxp/cli/config/mktxp.conf
@@ -47,12 +47,14 @@
     pool = True                     # IPv4 Pool metrics
     firewall = True                 # IPv4 Firewall rules traffic metrics
     neighbor = True                 # IPv4 Reachable Neighbors
+    address_list = None             # Firewall Address List metrics, a comma-separated list of names
     dns = False                     # DNS stats
 
     ipv6_route = False              # IPv6 Routes metrics    
     ipv6_pool = False               # IPv6 Pool metrics
     ipv6_firewall = False           # IPv6 Firewall rules traffic metrics
     ipv6_neighbor = False           # IPv6 Reachable Neighbors
+    ipv6_address_list = None        # IPv6 Firewall Address List metrics, a comma-separated list of names
 
     poe = True                      # POE metrics
     monitor = True                  # Interface monitor metrics
