--- a/deploy/kubernetes/secret.yaml
+++ b/deploy/kubernetes/secret.yaml
@@ -67,12 +67,12 @@ stringData:
             
             username = username     # RouterOS user, needs to have 'read' and 'api' permissions
             password = password
-            credentials_file = ""
+            credentials_file = ""   # To use an external file in YAML format for both username and password, specify the path here
             
             use_ssl = False                 # enables connection via API-SSL servis
             no_ssl_certificate = False      # enables API_SSL connect without router SSL certificate
             ssl_certificate_verify = False  # turns SSL certificate verification on / off
-            ssl_check_hostname = True       # check if the hostname matches the peer cert’s hostname 
+            ssl_check_hostname = True       # check if the hostname matches the peer cert’s hostname
             ssl_ca_file = ""                # path to the certificate authority file to validate against, leave empty to use system store
             plaintext_login = True          # for legacy RouterOS versions below 6.43 use False
 
@@ -90,12 +90,14 @@ stringData:
             pool = True                     # IPv4 Pool metrics
             firewall = True                 # IPv4 Firewall rules traffic metrics
             neighbor = True                 # IPv4 Reachable Neighbors
+            address_list = None             # Firewall Address List metrics, a comma-separated list of names
             dns = False                     # DNS stats
 
             ipv6_route = False              # IPv6 Routes metrics    
             ipv6_pool = False               # IPv6 Pool metrics
             ipv6_firewall = False           # IPv6 Firewall rules traffic metrics
             ipv6_neighbor = False           # IPv6 Reachable Neighbors
+            ipv6_address_list = None        # IPv6 Firewall Address List metrics, a comma-separated list of names
 
             poe = True                      # POE metrics
             monitor = True                  # Interface monitor metrics
@@ -121,11 +123,11 @@ stringData:
 
             bfd = False                     # BFD sessions metrics
             bgp = False                     # BGP sessions metrics
-            routing_stats = False           # Routing process stats            
+            routing_stats = False           # Routing process stats
             certificate = False             # Certificates metrics
 
             container = False               # Containers metrics
-
+            
             remote_dhcp_entry = None        # An MKTXP entry to provide for remote DHCP info / resolution
             remote_capsman_entry = None     # An MKTXP entry to provide for remote capsman info 
 
