--- a/mktxp/cli/config/mktxp.conf
+++ b/mktxp/cli/config/mktxp.conf
@@ -26,6 +26,8 @@
     password = password
     credentials_file = ""   # To use an external file in YAML format for both username and password, specify the path here
     
+    custom_labels = None    # Custom labels to be injected to all device metrics, comma-separated key:value (or key=value) pairs
+
     use_ssl = False                 # enables connection via API-SSL servis
     no_ssl_certificate = False      # enables API_SSL connect without router SSL certificate
     ssl_certificate_verify = False  # turns SSL certificate verification on / off
