feat: w60g initial poc

--- a/mktxp/cli/config/mktxp.conf
+++ b/mktxp/cli/config/mktxp.conf
@@ -21,11 +21,11 @@
     enabled = True          # turns metrics collection for this RouterOS device on / off
     hostname = localhost    # RouterOS IP address
     port = 8728             # RouterOS IP Port
-    
+
     username = username     # RouterOS user, needs to have 'read' and 'api' permissions
     password = password
     credentials_file = ""   # To use an external file in YAML format for both username and password, specify the path here
-    
+
     custom_labels = None    # Custom labels to be injected to all device metrics, comma-separated key:value (or key=value) pairs
 
     use_ssl = False                 # enables connection via API-SSL servis
@@ -41,10 +41,10 @@
     dhcp_lease = True               # DHCP lease metrics
 
     connections = True              # IP connections metrics
-    connection_stats = False        # Open IP connections metrics 
+    connection_stats = False        # Open IP connections metrics
 
     interface = True                # Interfaces traffic metrics
-    
+
     route = True                    # IPv4 Routes metrics
     pool = True                     # IPv4 Pool metrics
     firewall = True                 # IPv4 Firewall rules traffic metrics
@@ -52,7 +52,7 @@
     address_list = None             # Firewall Address List metrics, a comma-separated list of names
     dns = False                     # DNS stats
 
-    ipv6_route = False              # IPv6 Routes metrics    
+    ipv6_route = False              # IPv6 Routes metrics
     ipv6_pool = False               # IPv6 Pool metrics
     ipv6_firewall = False           # IPv6 Firewall rules traffic metrics
     ipv6_neighbor = False           # IPv6 Reachable Neighbors
@@ -60,6 +60,7 @@
 
     poe = True                      # POE metrics
     monitor = True                  # Interface monitor metrics
+    w60g = False                    # W60G monitor metrics
     netwatch = True                 # Netwatch metrics
     public_ip = True                # Public IP metrics
     wireless = True                 # WLAN general metrics
@@ -86,9 +87,9 @@
     certificate = False             # Certificates metrics
 
     container = False               # Containers metrics
-    
+
     remote_dhcp_entry = None        # An MKTXP entry to provide for remote DHCP info / resolution
-    remote_capsman_entry = None     # An MKTXP entry to provide for remote capsman info 
+    remote_capsman_entry = None     # An MKTXP entry to provide for remote capsman info
 
     use_comments_over_names = True  # when available, forces using comments over the interfaces names
     check_for_updates = False       # check for available ROS updates
