update README.md with w60g options

--- a/mktxp/cli/config/mktxp.conf
+++ b/mktxp/cli/config/mktxp.conf
@@ -60,13 +60,13 @@
 
     poe = True                      # POE metrics
     monitor = True                  # Interface monitor metrics
-    w60g = False                    # W60G monitor metrics
     netwatch = True                 # Netwatch metrics
     public_ip = True                # Public IP metrics
     wireless = True                 # WLAN general metrics
     wireless_clients = True         # WLAN clients metrics
     capsman = True                  # CAPsMAN general metrics
     capsman_clients = True          # CAPsMAN clients metrics
+    w60g = False                    # W60G metrics
 
     eoip = False                    # EoIP status metrics
     gre = False                     # GRE status metrics
