--- a/deploy/kubernetes/secret.yaml
+++ b/deploy/kubernetes/secret.yaml
@@ -110,6 +110,7 @@ stringData:
             wireless_clients = True         # WLAN clients metrics
             capsman = True                  # CAPsMAN general metrics
             capsman_clients = True          # CAPsMAN clients metrics
+            w60g = False                    # W60G metrics
 
             eoip = False                    # EoIP status metrics
             gre = False                     # GRE status metrics
