Configurable Bandwidth Collector DNS, #275

--- a/mktxp/cli/config/_mktxp.conf
+++ b/mktxp/cli/config/_mktxp.conf
@@ -19,9 +19,10 @@
     max_delay_on_failure = 900
     delay_inc_div = 5
 
-    bandwidth = False                # Turns metrics bandwidth metrics collection on / off    
-    bandwidth_test_interval = 600    # Interval for collecting bandwidth metrics
-    minimal_collect_interval = 5     # Minimal metric collection interval
+    bandwidth = False                   # Turns metrics bandwidth metrics collection on / off
+    bandwidth_test_dns_server = 8.8.8.8 # The DNS server to be used for the bandwidth test connectivity check
+    bandwidth_test_interval = 600       # Interval for collecting bandwidth metrics
+    minimal_collect_interval = 5        # Minimal metric collection interval
 
     verbose_mode = False             # Set it on for troubleshooting
 
