Consistent Interface Name Formatting, #176 #54

--- a/mktxp/cli/config/mktxp.conf
+++ b/mktxp/cli/config/mktxp.conf
@@ -91,5 +91,8 @@
     remote_dhcp_entry = None        # An MKTXP entry to provide for remote DHCP info / resolution
     remote_capsman_entry = None     # An MKTXP entry to provide for remote capsman info 
 
-    use_comments_over_names = True  # when available, forces using comments over the interfaces names
+    interface_name_format = name    # Format to use for interface / resource names, allowed values: 'name', 'comment', or 'combined'
+                                        # 'name': use interface name only (e.g. 'ether1')
+                                        # 'comment': use comment if available, fallback to name if not
+                                        # 'combined': use both (e.g. 'ether1 (Office Switch)')
     check_for_updates = False       # check for available ROS updates
