Add target support to override the module config for the multi-target pattern

--- a/mktxp/cli/config/mktxp.conf
+++ b/mktxp/cli/config/mktxp.conf
@@ -19,6 +19,7 @@
     # this affects configuration of all routers, unless overloaded on their specific levels
 
     enabled = True          # turns metrics collection for this RouterOS device on / off
+    module_only = False     # use this entry only as a probe module (skip /metrics collection)
     hostname = localhost    # RouterOS IP address
     port = 8728             # RouterOS IP Port
     
