Implement connection pooling for multi-target and add /probe to own connection handler + tests

--- a/mktxp/cli/config/_mktxp.conf
+++ b/mktxp/cli/config/_mktxp.conf
@@ -35,3 +35,7 @@
     persistent_dhcp_cache = True              # Persist DHCP cache between metric collections
     compact_default_conf_values = False       # Compact mktxp.conf, so only specific values are kept on the individual routers' level
     prometheus_headers_deduplication = False  # Deduplicate Prometheus HELP / TYPE headers in the metrics output
+
+    probe_connection_pool = False             # Enable probe-only connection reuse keyed by module+target
+    probe_connection_pool_ttl = 300           # Probe connection TTL in seconds
+    probe_connection_pool_max_size = 128      # Max number of probe connections to keep
